--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,17 @@ android:
     - extra-android-m2repository
     - extra-android-support
 
-    - android-22
-    - sys-img-armeabi-v7a-android-22
+#    - android-22
+#    - sys-img-armeabi-v7a-android-22
+#
+#before_script:
+#  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+#  - emulator -avd test -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
-before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+script:
+  - ./gradlew assembleDebug
 
 licenses:
     - 'android-sdk-preview-license-52d11cd2'
